--- a/src/main/resources/templates/user/edituser.html
+++ b/src/main/resources/templates/user/edituser.html
@@ -5,11 +5,10 @@
 
 <body>
 
-    <header th:replace="~{piece :: header('New User')}"></header>
-    
-    <div th:replace="~{user/fragment :: form(newUserDTO,'/register/user')}"></div>
+    <header th:replace="~{piece :: header('Edit User #'+${userId})}"></header>
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <div th:replace="~{user/fragment :: form(newUserDTO,'/register/user/'+${userId})}"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
